                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-12-2005 added: File Browser Dialog - requires skinning
 - 01-12-2005 fixed: Path history was incorrect for media windows started with XBMC.ActivateWindow(window,path)
 - 01-12-2005 fixed: Memory leak in multicoloured text rendering (edit, rss controls)
 - 30-11-2005 fixed: [ 1330862 ] Bookmarks OSD Window does not disappear on video end.
 - 30-11-2005 fixed: Notifications cause stack overflow if the stack dialog is on screen and left or right is pressed.
 - 29-11-2005 updated: German language file
 - 29-11-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 29-11-2005 updated: Norwegian language file (Thnx to vnm)
 - 29-11-2005 updated: French language file (Thnx to modhack)
 - 29-11-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 29-11-2005 fixed: file sizes were missing in my videos.
 - 28-11-2005 fixed: Stacked .nfo file paths were incorrect.
 - 28-11-2005 added: Workaround for ReadFile() returning incorrect data at the DVD layer change - requires special version
                     of libdvdcss-2.dll (rename from libdvdcss-2.dll_layerchangehack).
 - 28-11-2005 fixed: Notifications were only showing if Kai was enabled.
 - 28-11-2005 fixed: Shuffle in Slideshow screensaver was disregarded.
 - 28-11-2005 added: Support for comma's in stacked file names.
 - 28-11-2005 fixed: same navigational bug in my pictures.
 - 28-11-2005 fixed: small navigational bug in my videos.
 - 27-11-2005 added: support for multipath bookmarks in video and pictures. its still very much experimental. use at your own risk.
 - 27-11-2005 fixed: my previous fix for paths ending with '//' caused more problems than it fixed.