@@ -667,17 +667,24 @@ void CGUIWindowVideoFiles::OnRetrieveVideoInfo(CFileItemList& items)
           CUtil::ReplaceExtension(pItem->m_strPath, ".nfo", strNfoFile);
           if (!CFile::Exists(strNfoFile))
             strNfoFile.Empty();
-          // try looking for .nfo file based off the stacked title
-          if (pItem->IsStack() && strNfoFile.IsEmpty())
+
+          // try looking for .nfo file for a stacked item
+          if (pItem->IsStack())
           {
+            // first try .nfo file matching first file in stack
             CStackDirectory dir;
-            CStdString stackedTitlePath = dir.GetStackedTitlePath(pItem->m_strPath);
-            CUtil::ReplaceExtension(stackedTitlePath, ".nfo", strNfoFile);
-            CLog::Log(LOGDEBUG,"File = [%s]",stackedTitlePath.c_str());
-            CLog::Log(LOGDEBUG," NFO = [%s]",strNfoFile.c_str());
+            CStdString firstFile = dir.GetFirstStackedFile(pItem->m_strPath);
+            CUtil::ReplaceExtension(firstFile, ".nfo", strNfoFile);
+            // else try .nfo file matching stacked title
             if (!CFile::Exists(strNfoFile))
-              strNfoFile.Empty();
+            {
+              CStdString stackedTitlePath = dir.GetStackedTitlePath(pItem->m_strPath);
+              CUtil::ReplaceExtension(stackedTitlePath, ".nfo", strNfoFile);
+              if (!CFile::Exists(strNfoFile))
+                strNfoFile.Empty();
+            }
           }
+
           if ( !strNfoFile.IsEmpty() )
           {
             CLog::Log(LOGDEBUG,"Found matching nfo file: %s", strNfoFile.c_str());
